--- a/site/templates/classes-and-objects.html
+++ b/site/templates/classes-and-objects.html
@@ -4,24 +4,23 @@ block body %}
 	<div class="backButton">
 		<a class="backButtonHover" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
 	</div>
+	<div class="bodyDiv">
 	<h1 class="h1Title">CLASSES & OBJECTS</h1>
 		<p class="pText">
 			A class is a blueprint or prototype the defines the variables and
 			the methods (functions) common to all objects of a certain kind.
 		</p>
+		<div class="paraBreak">
 		<h2 class="h2Title">An Example of Classes In Python</h2>
-		<div class="bodyDiv">
-		<pre
-			class="codeBox"
-		>
-<code>
+		<pre class="codeBox">
+<code class="language-python">
 class Car: 
 	def __init__(self, brand, model, year): 
-		self.brand = brand 
-		self.model = model 
-		self.year = year 
-		
-		def start_engine(self): 
+		self.brand = brand
+		self.model = model
+		self.year = year
+
+		def start_engine(self):
 			print("Engine Started")
 </code>
 		</pre>
@@ -37,7 +36,7 @@ class Car:
 		<pre
 			class="codeBox"
 		>
-    <code>
+    <code class="language-python">
 my_car = Car("Toyota", "Supra", 2021)
     </code>
 </pre>
@@ -49,7 +48,7 @@ my_car = Car("Toyota", "Supra", 2021)
 		<pre
 			class="codeBox"
 		>
-			<code>
+			<code class="language-python">
 my_car.start_engine()	# prints "Engine started"
     </code>
 </pre>
@@ -67,29 +66,29 @@ my_car.start_engine()	# prints "Engine started"
 			the class with actual values.
 		</p>
 	</div>
+	<div class="paraBreak">
 	<h2 class="h2Title">
 		Benefits of using classes and objects in OOP
 	</h2>
-	<div class="bodyDiv">
-		<h3 class="h3Title">Modularity:</h3>
+		<h3 class="h3Title">Modularity</h3>
 		<p class="pExplain">
 			The source code for an object can be written and maintained
 			independently of the source code for other objects. Once created, an
 			object can be easily passed around inside the system.
 		</p>
-		<h3 class="h3Title">Information-hiding:</h3>
+		<h3 class="h3Title">Information-hiding</h3>
 		<p class="pExplain">
 			By interacting only with an object's methods, the details of its
 			internal implementation remain hidden from the outside world.
 		</p>
-		<h3 class="h3Title">Code Re-usability:</h3>
+		<h3 class="h3Title">Code Re-usability</h3>
 		<p class="pExplain">
 			If an object already exists (perhaps written by another person), you
 			can use that object in your program. This allows specialists to
 			implement/test/debug complex, task-specific objects, which you can
 			then trust to run your own code.
 		</p>
-		<h3 class="h3Title">Plug-ability & Debugging Ease:</h3>
+		<h3 class="h3Title">Plug-ability & Debugging Ease</h3>
 		<p class="pExplain">
 			If a particular object turns out to be problematic, you can simply
 			remove it from your application and plug in a different object as
@@ -97,7 +96,7 @@ my_car.start_engine()	# prints "Engine started"
 			the real world. If a bolt breaks, you replace it, not the entire
 			machine.
 		</p>
-		<h3 class="h3Title">Encapsulation:</h3>
+		<h3 class="h3Title">Encapsulation</h3>
 		<p class="pExplain">
 			A class or object can encapsulate functionality and data into one
 			reusable package. the data (attributes) and code (methods) are tied
@@ -105,14 +104,14 @@ my_car.start_engine()	# prints "Engine started"
 			encapsulation helps manage complexity by keeping the interactions
 			between objects under control.
 		</p>
-		<h3 class="h3Title">Inheritance:</h3>
+		<h3 class="h3Title">Inheritance</h3>
 		<p class="pExplain">
 			Classes can inherit common properties and functionality from other
 			classes. This allows for more efficient and consistent code by
 			allowing classes to share, extend, and override configurations and
 			behaviors defined in other classes.
 		</p>
-		<h3 class="h3Title">Polymorphism:</h3>
+		<h3 class="h3Title">Polymorphism</h3>
 		<p class="pExplain">
 			Polymorphism allows a single interface to represent different types
 			of objects at runtime. This means that different classes can define
