--- a/site/templates/inheritance.html
+++ b/site/templates/inheritance.html
@@ -4,6 +4,7 @@ body %}
 	<div class="backButton">
 		<a class="backButtonHover" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
 	</div>
+	<div class="bodyDiv">
 	<h1 class="h1Title">Inheritance</h1>
 		<p class="pText">
 			Inheritance is a fundamental principle of OOP that allows one class
@@ -11,44 +12,44 @@ body %}
 			the concept of reusability and is a way to create a new class using
 			properties of an existing class without modifying it.
 		</p>
+		<div class="paraBreak">
 	<h2 class="h2Title">Key Concepts</h2>
-	<div class="bodyDiv">
-		<h3 class="h3Title">Base Class (Parent Class):</h3>
+		<h3 class="h3Title">Base Class (Parent Class)</h3>
 		<p class="pExplain">
 			The class whose properties and methods are inherited is known as the
 			base case or parent class.
 		</p>
-		<h3 class="h3Title">Derived Class (Child Class):</h3>
+		<h3 class="h3Title">Derived Class (Child Class)</h3>
 		<p class="pExplain">
 			The class that inherits properties from another class is known as
 			the derived class or child class.
 		</p>
-		<h3 class="h3Title">Inheritance Types:</h3>
+		<h3 class="h3Title">Inheritance Types</h3>
 		<p class="pExplain">
 			There are several types of inheritance, including single, multiple,
 			multilevel, hierarchical, and hybrid inheritance. The type of
 			inheritance implemented depends on the programming language used.
 		</p>
-		<h3 class="h3Title">Method Overriding:</h3>
+		<h3 class="h3Title">Method Overriding</h3>
 		<p class="pExplain">
 			In the derived classes, you can modify the behavior of methods
 			inherited from the base class. This is known as method overriding.
 		</p>
-		<h3 class="h3Title">Access Modifiers:</h3>
+		<h3 class="h3Title">Access Modifiers</h3>
 		<p class="pExplain">
 			These define the accessibility of the properties and methods of a
 			class. Common access modifiers include public, private, and
 			protected.
 		</p>
 	</div>
+		<div class="paraBreak">
 	<h2 class="h2Title">
 		Examples of Inheritance In Python
 	</h2>
-	<div class="bodyDiv">
 		<pre
 			class="codeBox"
 		>
-        <code>
+        <code class="language-python">
 class Animal:	        # base class
     def __init__(self, name):
         self.name = name
@@ -74,7 +75,7 @@ class Cat(Animal):	    # derived class
 		<pre
 			class="codeBox"
 		>
-        <code>
+        <code class="language-python">
 fido = Dog("Fido")
 print(fido.speak())		    # prints "Woof!"
 
@@ -89,12 +90,12 @@ print(whiskers.speak())		# prints "Meow!"
 			reducing code duplication.
 		</p>
 	</div>
+		<div class="paraBreak">
 		<h3 class="h3Title">Using the [ super() ] function</h3>
-		<div class="bodyDiv">
 		<pre
 			class="codeBox"
 		>
-            <code>
+            <code class="language-python">
 class Mammal:
     def __init__(self, mammalName):
         print(mammalName, " is a warm-blooded animal.")
@@ -111,7 +112,7 @@ d1 = Dog()
 		<pre
 			class="codeBox"
 		>
-        <code>
+        <code class="language-python">
 &gt;&gt;Dog has four legs.
 &gt;&gt;Dog is a warm-blooded animal.
         </code>
@@ -125,8 +126,8 @@ d1 = Dog()
 			[ __init__ ] method prints "Dog is a warm-blooded animal."
 		</p>
 	</div>
+	<div class="paraBreak">
 		<h3 class="h3Title">Multiple Inheritance</h3>
-		<div class="bodyDiv">
 		<p class="pText">
 			Python supports multiple inheritance, where a class can be derived
 			from more than one base classes
@@ -135,7 +136,7 @@ d1 = Dog()
 		<pre
 			class="codeBox"
 		>
-        <code>
+        <code class="language-python">
 class Animal:
     def eats(self):
         return "Eats food"
@@ -158,8 +159,8 @@ print(s.files())	# prints "Flies in the sky"
 			Bird ] classes, and inherits methods from both.
 		</p>
 	</div>
+	<div class="paraBreak">
 		<h3 class="h3Title">Method Overriding</h3>
-		<div class="bodyDiv">
 		<p class="pText">
 			In Python, method overriding occurs by simply defining in the child
 			class a method with the same name of a method in the parent class.
@@ -168,7 +169,7 @@ print(s.files())	# prints "Flies in the sky"
 		<pre
 			class="codeBox"
 		>
-        <code>
+        <code class="language-python">
 class Bird:
     def intro(self):
         print("There are many types of birds.")
@@ -222,6 +223,5 @@ b3.flight()	# prints "Ostriches cannot fly."
 			inherited from the [ Bird ] class and the [ flight() ] method is
 			overridden in the [ ostrich ] class.
 		</p>
-	</div>
 </div>
 {% endblock %}
